chore: remove /changeLocale endpoint from api
