# crowdsource-api/swagger/swagger-output.json
@@ -14,42 +14,6 @@
   "consumes": [],
   "produces": [],
   "paths": {
-    "/changeLocale/{locale}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "locale",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {},
-        "deprecated": true
-      }
-    },
-    "/getDetails/{language}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "language",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        },
-        "deprecated": true
-      }
-    },
     "/verify-user": {
       "post": {
         "tags": [
@@ -74,26 +38,6 @@
             "description": "OK"
           }
         }
-      }
-    },
-    "/getAllInfo/{language}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "language",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        },
-        "deprecated": true
       }
     },
     "/media/{type}": {
@@ -394,32 +338,6 @@
             "description": "Unprocessable Entity"
           }
         }
-      }
-    },
-    "/media-object/{source}/{entityId}": {
-      "post": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "source",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "entityId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
       }
     },
     "/report": {
@@ -1034,360 +952,6 @@
             "description": "Bad Gateway"
           }
         }
-      }
-    },
-    "/language-goal/{type}/{language}/{source}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "language",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "source",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/available-languages/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/target-info/{type}/{sourceLanguage}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "sourceLanguage",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "targetLanguage",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/top-languages-by-hours": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/top-languages-by-speakers": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {},
-        "deprecated": true
-      }
-    },
-    "/top-languages": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/aggregate-data-count/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "byLanguage",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "byState",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/languages": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {},
-        "deprecated": true
-      }
-    },
-    "/v2/stats/summary/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/stats/summary/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/stats/categories/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "language",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "timeframe",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/stats/contributions/age/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "language",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/stats/contributions/gender/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "language",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/timeline/{type}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "language",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "timeframe",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/progress/{type}/{language?}/{source?}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "language?",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "source?",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "deprecated": true
-      }
-    },
-    "/participation-stats": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {},
-        "deprecated": true
       }
     }
   },
